[ci] Fix deprecation